examples/test/testpolicy18955.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18955
  namespace: namespace228
spec:
  podSelector:
    matchLabels:
      key44: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value11
          key46: value8
          key22: value1
      podSelector:
        matchLabels:
          key1: value33
